--- a/test/qunit.ndefrecords.html
+++ b/test/qunit.ndefrecords.html
@@ -11,12 +11,13 @@
   <script src="../src/ndeflibrary.core.js"></script>
   <script src="../src/ndeflibrary.module.js"></script>
   <script src="../src/submodule/ndeflibrary.NdefRecord.js"></script>
+  <script src="../src/submodule/ndeflibrary.NdefMessage.js"></script>
   <script src="../src/ndeflibrary.init.js"></script>
   <script>
   </script>
 </head>
 <body>
-  <h1 id="qunit-header">Library Unit Tests</h1>
+  <h1 id="qunit-header">NdefRecords Unit Tests</h1>
    <h2 id="qunit-banner"></h2>
    <div id="qunit-testrunner-toolbar"></div>
    <h2 id="qunit-userAgent"></h2>
@@ -61,8 +62,6 @@
     	
     	ndefRecord.setType(array);
     	var t = ndefRecord.getType();
-    	console.log(t);
-    	console.log(array);
         deepEqual(t, array);
      });
      
