--- a/test/qunit.NdefMessage.html
+++ b/test/qunit.NdefMessage.html
@@ -11,6 +11,7 @@
   <script src="../src/ndeflibrary.core.js"></script>
   <script src="../src/ndeflibrary.module.js"></script>
   <script src="../src/submodule/ndeflibrary.NdefRecord.js"></script>
+  <script src="../src/submodule/ndeflibrary.NdefUriRecord.js"></script>
   <script src="../src/submodule/ndeflibrary.NdefMessage.js"></script>
   <script src="../src/ndeflibrary.init.js"></script>
   <script>
