--- a/test/qunit.ndefrecords.html
+++ b/test/qunit.ndefrecords.html
@@ -12,7 +12,11 @@
   <script src="../src/ndeflibrary.module.js"></script>
   <script src="../src/submodule/ndeflibrary.NdefRecord.js"></script>
   <script src="../src/submodule/ndeflibrary.NdefUriRecord.js"></script>
+  <script src="../src/submodule/ndeflibrary.NdefAndroidAppRecord.js"></script>
   <script src="../src/submodule/ndeflibrary.NdefMessage.js"></script>
+  <script src="../src/submodule/ndeflibrary.NdefTelRecord.js"></script>
+  <script src="../src/submodule/ndeflibrary.NdefGeoRecord.js"></script>
+  <script src="../src/submodule/ndeflibrary.NdefSocialRecord.js"></script>
   <script src="../src/ndeflibrary.init.js"></script>
   <script>
   </script>
