--- a/test/qunit.NdefLibrary.html
+++ b/test/qunit.NdefLibrary.html
@@ -141,6 +141,110 @@
      	notDeepEqual(ndefMessage2.toByteArray(), ndefMessage.toByteArray());
      });
 
+
+	test('Dictionary URI', function() {
+		
+		var result = "nfcinteractor:compose";
+		var url = [0xD1, 0x01, 0x16, 0x55, 0x00, 0x6E, 0x66, 0x63, 0x69, 0x6E, 0x74, 0x65, 0x72, 0x61, 0x63, 0x74, 0x6F, 0x72, 0x3A, 0x63, 0x6F, 0x6D, 0x70, 0x6F, 0x73, 0x65];
+		var ndefMessage = NdefLibrary.NdefMessage.fromByteArray(url);
+		var record = ndefMessage.getRecords()[0];
+		deepEqual(NdefLibrary.NdefUriRecord.isRecordType(record), true);
+		deepEqual(new NdefLibrary.NdefUriRecord(record).getUri(), result);
+		
+		//URL-http
+		var result = "http://ndef.mopius.com";
+		var url = [0xD1,0x01,0x10,0x55,0x03,0x6E,0x64,0x65,0x66,0x2E,0x6D,0x6F,0x70,0x69,0x75,0x73,0x2E,0x63,0x6F,0x6D];
+		var ndefMessage = NdefLibrary.NdefMessage.fromByteArray(url);
+		var record = ndefMessage.getRecords()[0];
+		deepEqual(NdefLibrary.NdefUriRecord.isRecordType(record), true);
+		deepEqual(new NdefLibrary.NdefUriRecord(record).getUri(), result);
+		
+		//URL-SpecialChars
+		var result = "custom:Testmessage -_(){}\":@äöüÄÖÜ";
+		var url = [0xD1,0x01,0x29,0x55,0x00,0x63,0x75,0x73,0x74,0x6F,0x6D,0x3A,0x54,0x65,0x73,0x74,0x6D,0x65,0x73,0x73,0x61,0x67,0x65,0x20,0x2D,0x5F,0x28,0x29,0x7B,0x7D,0x22,0x3A,0x40,0xC3,0xA4,0xC3,0xB6,0xC3,0xBC,0xC3,0x84,0xC3,0x96,0xC3,0x9C];
+		var ndefMessage = NdefLibrary.NdefMessage.fromByteArray(url);
+		var record = ndefMessage.getRecords()[0];
+		deepEqual(NdefLibrary.NdefUriRecord.isRecordType(record), true);
+		deepEqual(new NdefLibrary.NdefUriRecord(record).getUri(), result);
+		
+     });
+
+	test('Dictionary Geo', function() {
+		
+		var url = [0xD1,0x01,0x17,0x55,0x00,0x67,0x65,0x6F,0x3A,0x34,0x38,0x2E,0x31,0x36,0x38,0x36,0x30,0x34,0x2C,0x31,0x36,0x2E,0x33,0x33,0x33,0x37,0x35];
+		var ndefMessage = NdefLibrary.NdefMessage.fromByteArray(url);
+		var record = ndefMessage.getRecords()[0];
+		
+		var geo = new NdefLibrary.NdefGeoRecord(record);
+		deepEqual(geo.getUri(), "geo:48.168604,16.33375");
+		//TODO lat and lon from URI check		
+     });
+
+	test('Dictionary Android', function() {
+		
+		var result = "com.twitter.android";
+		var url = [0xD4,0x0F,0x13,0x61,0x6E,0x64,0x72,0x6F,0x69,0x64,0x2E,0x63,0x6F,0x6D,0x3A,0x70,0x6B,0x67,0x63,0x6F,0x6D,0x2E,0x74,0x77,0x69,0x74,0x74,0x65,0x72,0x2E,0x61,0x6E,0x64,0x72,0x6F,0x69,0x64];
+		var ndefMessage = NdefLibrary.NdefMessage.fromByteArray(url);
+		var record = ndefMessage.getRecords()[0];
+		deepEqual(NdefLibrary.NdefAndroidAppRecord.isRecordType(record), true);
+		deepEqual(new NdefLibrary.NdefAndroidAppRecord(record).getPackageName(), result);
+     });
+
+	test('Dictionary Social', function() {
+		
+		var result = "mopius";
+		var url = [0xD1,0x01,0x13,0x55,0x03,0x74,0x77,0x69,0x74,0x74,0x65,0x72,0x2E,0x63,0x6F,0x6D,0x2F,0x6D,0x6F,0x70,0x69,0x75,0x73];
+		var ndefMessage = NdefLibrary.NdefMessage.fromByteArray(url);
+		var record = ndefMessage.getRecords()[0];
+		deepEqual(new NdefLibrary.NdefSocialRecord(record).getUri(), "http://twitter.com/mopius");
+		deepEqual(new NdefLibrary.NdefSocialRecord(record).getSocialType(), NdefLibrary.NdefSocialRecord.NfcSocialType.Twitter);
+     });
+
+	test('Dictionary Tel', function() {
+		
+		var result = "+1234";
+		var url = [0xD1,0x01,0x06,0x55,0x05,0x2B,0x31,0x32,0x33,0x34];
+		var ndefMessage = NdefLibrary.NdefMessage.fromByteArray(url);
+		var record = ndefMessage.getRecords()[0];
+		deepEqual(NdefLibrary.NdefTelRecord.isRecordType(record), true);
+		deepEqual(new NdefLibrary.NdefTelRecord(record).getTelNumber(), result);
+		
+     });
+
+	test('Dictionary Ext', function() {
+		
+		var url = [0xD4,0x0E,0x07,0x6D,0x6F,0x70,0x69,0x75,0x73,0x2E,0x63,0x6F,0x6D,0x3A,0x6E,0x66,0x63,0x54,0x65,0x73,0x74,0x69,0x6E,0x67];
+		var ndefMessage = NdefLibrary.NdefMessage.fromByteArray(url);
+		var record = ndefMessage.getRecords()[0];
+		deepEqual(new NdefLibrary.NdefRecord(record).getTypeNameFormat(), NdefLibrary.NdefRecord.TypeNameFormatType.ExternalRtd);
+		deepEqual(new NdefLibrary.NdefRecord(record).getType(), "mopius.com:nfc".getBytes());
+		deepEqual(new NdefLibrary.NdefRecord(record).getPayload(), "Testing".getBytes());
+		
+     });
+
+	test('Dictionary Empty', function() {
+		
+		var url = [0xD0,0x00,0x00];
+		var ndefMessage = NdefLibrary.NdefMessage.fromByteArray(url);
+		var record = ndefMessage.getRecords()[0];
+		deepEqual(new NdefLibrary.NdefRecord(record).getTypeNameFormat(), NdefLibrary.NdefRecord.TypeNameFormatType.Empty);
+		
+     });
+
+	test('Dictionary Multible Records', function() {
+		
+		var url = [0x91,0x01,0x0C,0x55,0x01,0x74,0x77,0x69,0x74,0x74,0x65,0x72,0x2E,0x63,0x6F,0x6D,0x54,0x0F,0x13,0x61,0x6E,0x64,0x72,0x6F,0x69,0x64,0x2E,0x63,0x6F,0x6D,0x3A,0x70,0x6B,0x67,0x63,0x6F,0x6D,0x2E,0x74,0x77,0x69,0x74,0x74,0x65,0x72,0x2E,0x61,0x6E,0x64,0x72,0x6F,0x69,0x64];
+		var ndefMessage = NdefLibrary.NdefMessage.fromByteArray(url);
+		var records = ndefMessage.getRecords();
+		deepEqual(records.length, 2);
+		deepEqual(ndefMessage.length(), 2);
+		
+		deepEqual(new NdefLibrary.NdefUriRecord(records[0]).getUri(), "http://www.twitter.com");
+		deepEqual(new NdefLibrary.NdefAndroidAppRecord(records[1]).getPackageName(), "com.twitter.android");
+	
+     });
+     
+     
    } ());
    </script>
 </body>
